# Controlduino

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Controlduino.code-workspace  Controlduino.sln  LICENSE  README.md  SerialController.sln  SerialController.vcxproj  SerialController.vcxproj.filters  SerialErrors.h  Serializer.cpp  install.txt  main.cpp
Controlduino/: Controlduino.vcxproj  Controlduino.vcxproj.filters
Controlduino/inc/: Serializer.h
Controlduino/src/: Serializer.cpp
arduino/: .gitignore  compile.bat  nano_pinout.txt
arduino/Controlduino/: Controlduino.ino  arduino_xinput.h  nano.h
inc/: calibration.h  controller.h  errorUtils.h  guiControl.h  readManager.h  serialErrors.h  serializer.h
src/: ErrorUtils.cpp  calibration.cpp  controller.cpp  errorUtils.cpp  guiControl.cpp  main.cpp  readManager.cpp  serializer.cpp
